# atp

./: .gitmodules  CMakeLists.txt  README.md  index.html  runtests.sh
R-packages/: .gitignore  CMakeLists.txt
R-packages/hzc/: CMakeLists.txt  DESCRIPTION  NAMESPACE
R-packages/hzc/R/: hzc.R  utils.R
R-packages/hzc/man/: hzc-package.Rd
R-packages/hzc/src/: Makevars  Makevars.tpl  hzc.cpp  hzc.h
R-packages/ib/: CMakeLists.txt  DESCRIPTION  NAMESPACE
R-packages/ib/R/: em.R  fh.R  ib.R
R-packages/ib/man/: ib-package.Rd
R-packages/ib/src/: Makevars.tpl  convert.cpp  convert.hpp  em.cpp  em.h  fh.cpp  fh.h  ib.cpp  ib.h  util.hpp
R-packages/mds/: CMakeLists.txt  DESCRIPTION  NAMESPACE
R-packages/mds/R/: mds.R
R-packages/mds/man/: mds-package.Rd
R-packages/mds/src/: Makevars.tpl  mds.cpp  mds.h
prototype/: CMakeLists.txt  agent_prototype.cpp  cluster_prototype.cpp  contract_manager_prototype.cpp  indicator_prototype.cpp  indicators.mdown  misc_prototype.cpp  numeric_prototype.cpp  ohlc_prototype.cpp
prototype/cpp/: agent_prototype.cpp  contract_manager_prototype.cpp  couchdb_prototype.cpp  ib_prototype.cpp  indicator_prototype.cpp  numeric_prototype.cpp  ohlc_prototype.cpp  test.proto
prototype/go/: build.sh  hello  hello.go
src/: AsyncResponse.hpp  CMakeLists.txt  ManagedAgent.hpp  MarketDataSubscriber.hpp  OrderManager.cpp  OrderManager.hpp  ZmqProtoBuffer.hpp  common.hpp  constants.h.in  firehose_main.cpp  log_levels.h  managed_agent.hpp  marketdata.hpp  marketdata_main.cpp  marketdata_sink.hpp  marketdata_source.hpp  utils.hpp
src/R/: CMakeLists.txt
src/boost/iostreams/: CMakeLists.txt
src/common/: AsyncResponse.hpp  CMakeLists.txt  Executor.hpp  Factory.hpp  async_response.hpp  executor.hpp  moving_window.hpp  moving_window_callback.hpp  moving_window_callbacks.hpp  moving_window_interval_policy.hpp  moving_window_samplers.hpp  ohlc.cpp  ohlc.hpp  ohlc_callbacks.hpp  ohlc_impl.hpp  time_series.hpp  time_utils.cpp  time_utils.hpp  types.hpp
src/couchdb/: CMakeLists.txt  couchdb.cpp  couchdb.hpp
src/cpp/: .gitignore  Application.hpp  CMakeLists.txt  common.hpp  constants.h.in  log_levels.h
src/cpp/common/: CMakeLists.txt  factory.hpp  (+6 more)
src/historian/: CMakeLists.txt  Db.cpp  Db.hpp  DbReactorClient.cpp  DbReactorClient.hpp  DbReactorClient_main.cpp  DbReactorStrategy.cpp  DbReactorStrategy.hpp  DbReactor_main.cpp  Db_main.cpp  Visitor.hpp  constants.hpp  historian.cpp  historian.hpp  historian_main.cpp  internal.hpp  time_utils.hpp
src/ib/: AbstractSocketConnector.hpp  AbstractSocketConnectorReactor.cpp  AbstractSocketConnectorReactor.hpp  ApiEventDispatcher.hpp  ApiMessageBase.cpp  ApiMessageBase.hpp  ApiProtocolHandler.hpp  Application.hpp  ApplicationBase.hpp  AsioEClientDriver.cpp  AsioEClientSocket.cpp  AsioEClientSocket.hpp  CMakeLists.txt  ContractEventDispatcher.hpp  EWrapperFactory.hpp  EventDispatcher.hpp  EventDispatcherBase.hpp  Exceptions.hpp  IBAPIFields.hpp  IBAPIValues.hpp  Initiator.cpp  Initiator.hpp  MarketEventDispatcher.cpp  MarketEventDispatcher.hpp  MarketEventDispatcherBase.hpp  Message.hpp  OrderEventDispatcher.cpp  OrderEventDispatcher.hpp  ProtoBufferApiMessage.hpp  ProtoBufferMessage.hpp  ReactorStrategyFactory.hpp  SessionID.hpp  SessionSetting.cpp  SessionSetting.hpp  SocketConnector.cpp  SocketConnector.hpp  SocketConnectorBase.hpp  SocketConnectorImpl.hpp  SocketInitiator.cpp  SocketInitiator.hpp  (+17 more)
src/indicator/: CMakeLists.txt  moving_averages.cpp  moving_averages.hpp
src/main/: CMakeLists.txt  DbReactorClient_main.cpp  cm.hpp  cm_main.cpp  ds_main.cpp  em.hpp  em_main.cpp  fh.hpp  firehose_main.cpp  global_defaults.hpp  hdb_main.cpp  historian_loader_main.cpp  hz_main.cpp  hzc_main.cpp  logreader_main.cpp  lp_main.cpp  marketdata_main.cpp  reactor_main.cpp  watcher_main.cpp
src/platform/: CMakeLists.txt  callback.hpp  contract_symbol.cpp  contract_symbol.hpp  generic_handler.hpp  indicator.hpp  marketdata_handler.hpp  marketdata_handler_proto_impl.hpp  message_processor.cpp  message_processor.hpp  platform.hpp  sequential_pipeline.hpp  strategy.hpp  types.hpp  version_info.cpp  version_info.hpp
src/proto/: CMakeLists.txt  common.hpp  common.proto  historian.hpp  historian.proto  ib.proto  impl.cpp  indicator.proto  ostream.cpp  ostream.hpp  platform.proto  template_instantiations.cpp
src/raptor/: CMakeLists.txt  DESCRIPTION
src/service/: CMakeLists.txt  ContractManager.cpp  ContractManager.hpp  LogReader.cpp  LogReader.hpp  LogReaderInternal.hpp  LogReaderVisitor.hpp  LogReaderZmq.cpp  LogReaderZmq.hpp  MarketDataSubscriber.hpp  OrderManager.cpp  OrderManager.hpp
src/varz/: CMakeLists.txt  VarzServer.cpp  varz.cpp  varz.hpp
src/zmq/: CMakeLists.txt  Publisher.cpp  Publisher.hpp  Reactor.cpp  Reactor.hpp  Responder.cpp  Responder.hpp  Subscriber.cpp  ZmqMessage.cpp  ZmqMessage.hpp  ZmqUtils.hpp  reactor_main.cpp  responder_main.cpp
test/: AllTests.cpp  ApiProtocolHandler.cpp  CMakeLists.txt  OrderManagerTest.cpp
test/common/: CMakeLists.txt  ExecutorTest.cpp  FactoryTest.cpp  MovingWindowTest.cpp  TimeSeriesTest.cpp
test/couchdb/: CouchDbTest.cpp
test/cpp/: AllTests.cpp  CMakeLists.txt
test/historian/: CMakeLists.txt  DbReactorTest.cpp  DbTest.cpp  InternalTest.cpp  UtilsTest.cpp
test/ib/: AllTests.cpp  ApiMessageBaseTest.cpp  AsioEClientDriverTest.cpp  AsioEClientSocketTest.cpp  CMakeLists.txt  MarketDataTest.cpp  MessageTest.cpp  SocketConnectorTest.cpp  SocketInitiatorTest.cpp  TestHarness.hpp  TickerMapTest.cpp  UtilsTest.cpp  VersionSpecific.hpp
test/platform/: CMakeLists.txt  IndicatorPipelineTest.cpp  MarketDataHandlerTest.cpp  MessageProcessorTest.cpp  StrategyTest.cpp
test/prototype/: CMakeLists.txt  agent_prototype.cpp  indicator_prototype.cpp  indicators.mdown  indicators.readme  indicators_prototype.cpp
test/service/: ApiProtocolHandler.cpp  CMakeLists.txt  ContractManagerTest.cpp  LogReaderTest.cpp  OrderManagerTest.cpp
test/varz/: CMakeLists.txt  VarzTest.cpp
test/zmq/: CMakeLists.txt  PubSubTest.cpp  ReactorTest.cpp  ResponderTest.cpp  ZmqMessageTest.cpp
(+239 files in other folders)
